--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>prolam</title>
+  <title>Prolam</title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,12 +22,13 @@
         <div class="cards">
 
           <div class="card">
-            <a class="Proficional_Academico" target="_blank" href="#services">
+            <a class="Proficional_Almoco" target="_blank" href="#services">
               <img width="280" height="28" src="./assets/segunda.png" alt="PROLAM" />
             </a>
             <h3>
-              <a class="Proficional_Academico" target="_blank" href="#services">
-                06/03
+              <a class="Proficional_Almoco" target="_blank" href="#services">
+                <!-- SEGUNDA -->
+                13/03
               </a>
             </h3>
             <p>
@@ -72,8 +73,8 @@
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
-              <li> FRANGO COM BATATAS </li>
+              <li> FRANGO GUISADO </li>
+              <!-- <li> FRANGO COM BATATAS </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -81,11 +82,12 @@
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> OVO FRITO </li> -->
               <!-- <li> ROUPA VELHA </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO E CALABRESA</li>
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO RICO </li>
+              <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> STROGONOFF DE CARNE </li> -->
               <!-- <li> REFRIGERANTE </li> -->
@@ -95,7 +97,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <!-- <li> BAQUETE </li> -->
+              <li> BAQUETE </li>
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
@@ -108,18 +110,19 @@
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
-              <li> AÇAÍ COM FARINHA DE TAPIOCA </li>
+              <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
             </ul>
             </p>
           </div>
 
           <div class="card">
-            <a class="Proficional_Academico" target="_blank" href="#services">
+            <a class="Proficional_Almoco" target="_blank" href="#services">
               <img width="280" height="28" src="./assets/terca.png" alt="PROLAM" />
             </a>
             <h3>
-              <a class="Proficional_Academico" target="_blank" href="#services">
-                07/03
+              <a class="Proficional_Almoco" target="_blank" href="#services">
+                <!-- TERÇA -->
+                14/03
               </a>
             </h3>
             <p>
@@ -128,11 +131,11 @@
               <li> PÃO FRANCÊS </li>
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
-              <!-- <li> BANANA COZIDA </li> -->
+              <li> BANANA COZIDA </li>
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <li> OVO COZIDO </li>
+              <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
@@ -149,7 +152,7 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BIFE A PARMEGIANA </li> -->
-              <li> BIFE A CAVALO </li>
+              <!-- <li> BIFE A CAVALO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
@@ -157,15 +160,16 @@
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <li> FIGADO ACEBOLADO </li>
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
-              <!-- <li> GUISADO DE CARNE </li> -->
+              <li> GUISADO DE CARNE </li>
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -194,9 +198,9 @@
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <li> PÃO COM OVO E QUEIJO </li>
+              <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
-              <!-- <li> PIT STOP / IOGURTE </li> -->
+              <li> PIT STOP / IOGURTE </li>
               <!-- <li> SALGADO </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> X SALADA </li> -->
@@ -205,12 +209,13 @@
           </div>
 
           <div class="card">
-            <a class="Proficional_Academico" target="_blank" href="#services">
+            <a class="Proficional_Almoco" target="_blank" href="#services">
               <img width="280" height="28" src="./assets/quarta.png" alt="PROLAM" />
             </a>
             <h3>
-              <a class="Proficional_Academico" target="_blank" href="#services">
-                08/03
+              <a class="Proficional_Almoco" target="_blank" href="#services">
+                <!-- QUARTA -->
+                15/03
               </a>
             </h3>
             <p>
@@ -239,6 +244,7 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <li> ALMONDEGAS </li>
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BISTECA SUÍNA </li> -->
@@ -249,13 +255,13 @@
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
-              <li> FILE DE FRANGO A MILANESA </li>
+              <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
+              <li> FRANGO FRITO </li>
               <!-- <li> FRANGO GUISADO </li> -->
-              <li> GUISADO DE CARNE </li>
+              <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA MISTA </li> -->
@@ -286,12 +292,12 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <li> MINGAU DE BANANA </li>
+              <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
               <!-- <li>SALADA FRUTA</li> -->
@@ -300,12 +306,13 @@
           </div>
 
           <div class="card">
-            <a class="Proficional_Academico" target="_blank" href="#services">
+            <a class="Proficional_Almoco" target="_blank" href="#services">
               <img width="280" height="28" src="./assets/quinta.png" alt="PROLAM" />
             </a>
             <h3>
-              <a class="Proficional_Academico" target="_blank" href="#services">
-                09/03
+              <a class="Proficional_Almoco" target="_blank" href="#services">
+                <!-- QUINTA -->
+                16/03
               </a>
             </h3>
             <p>
@@ -316,10 +323,10 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> FRUTAS </li>
+              <!-- <li> FRUTAS </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -338,7 +345,7 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <li> CARNE DESFIADA COM LEGUMES </li>
+              <!-- <li> CARNE DESFIADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -347,7 +354,7 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
@@ -362,7 +369,8 @@
               <!-- <li> LINGUA AO MOLHO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> PEIXE FRITO </li> -->
+              <li> PEIXE FRITO </li>
+              <li> PEITO DE FRANGO </li>
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
@@ -377,7 +385,7 @@
             <P class="desjejum">LANCHE:</P>
             <ul>
               <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
-              <li> BAQUETE </li>
+              <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
@@ -392,17 +400,19 @@
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
+              <li> SALADA DE FRUTA </li>
             </ul>
             </p>
           </div>
 
           <div class="card">
-            <a class="Proficional_Academico" target="_blank" href="#services">
+            <a class="Proficional_Almoco" target="_blank" href="#services">
               <img width="280" height="28" src="./assets/sexta.png" alt="PROLAM" />
             </a>
             <h3>
-              <a class="Proficional_Academico" target="_blank" href="#services">
-                10/03
+              <a class="Proficional_Almoco" target="_blank" href="#services">
+                <!-- SEXTA -->
+                17/03
               </a>
             </h3>
             <p>
@@ -412,7 +422,7 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
@@ -423,7 +433,7 @@
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
-              <!-- <li> TAPIOCA COM QUEIJO </li> -->
+              <li> TAPIOCA COM QUEIJO </li>
 
               <!-- <li> FAROFA DE CONSERVA </li> -->
 
@@ -436,7 +446,7 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <li> CARNE ASADA </li>
+              <!-- <li> CARNE ASADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> COSTELA AO MOLHO </li> -->
               <!-- <li> CHURRASCO </li> -->
@@ -446,7 +456,7 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO </li>
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
@@ -456,8 +466,9 @@
               <!-- <li> ISCA DE CARNE COM FRITAS</li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
-              <li> LASANHA </li>
+              <!-- <li> LASANHA </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
+              <li> MACARRONADA DE CAMARÃO </li>
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
@@ -492,12 +503,13 @@
           </div>
 
           <div class="card">
-            <a class="Proficional_Academico" target="_blank" href="#services">
+            <a class="Proficional_Almoco" target="_blank" href="#services">
               <img width="280" height="28" src="./assets/sabado.png" alt="PROLAM" />
             </a>
             <h3>
-              <a class="Proficional_Academico" target="_blank" href="#services">
-                11/03
+              <a class="Proficional_Almoco" target="_blank" href="#services">
+                <!-- SÁBADO -->
+                18/03
               </a>
             </h3>
             <p>
@@ -507,12 +519,12 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -527,8 +539,8 @@
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
-              <li> BIFE AO MOLHO </li>
-              <!-- <li> CARNE AO MOLHO </li> -->
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -567,11 +579,11 @@
               <!-- <li> ABACATADA COM BOLACHA </li> -->
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
-              <!-- <li> BISCOITO RECHEADO </li> -->
+              <li> BISCOITO RECHEADO </li>
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> KIKÃO </li>
+              <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
@@ -584,14 +596,14 @@
           </div>
 
           <div class="card">
-            <a class="Proficional_Academico" target="_blank" href="#services">
+            <a class="Proficional_Almoco" target="_blank" href="#services">
               <img width="280" height="28" src="./assets/domingo.png" alt="PROLAM" />
             </a>
 
             <h3>
-              <a class="Proficional_Academico" target="_blank" href="#services">
+              <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- DOMINGO -->
-                12/03
+                19/03
               </a>
             </h3>
             <p>
@@ -602,7 +614,7 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <!-- <li> FRUTA </li> -->
+              <li> FRUTA </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -611,7 +623,7 @@
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> QUEIJO </li> -->
-              <li> SALSICHA COM MOLHO </li>
+              <!-- <li> SALSICHA COM MOLHO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
@@ -626,15 +638,15 @@
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
-              <!-- <li> FAROFA DE CONSERVA </li> -->
+              <li> FAROFA DE CONSERVA </li>
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <li> FRANGO FRITO </li>
-              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <li> FRANGO GUISADO </li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -642,7 +654,7 @@
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
@@ -664,10 +676,10 @@
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <!-- <li> PÃO COM OVO E QUEIJO </li> -->
+              <li> PÃO COM OVO E QUEIJO </li>
               <!-- <li> PÃO COM QUEIJO, PRESUNTO E OVO </li> -->
               <!-- <li> PASTEL </li> -->
-              <li> PIT STOP / IOGURTE </li>
+              <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
