--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> BAQUETE </li>
+              <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
